--- a/pages/hombres.html
+++ b/pages/hombres.html
@@ -108,7 +108,7 @@
     </nav>
     <aside class="product-detail inactive">
       <div class="title-container">
-        <img src="./iconos/flechita.svg" alt="arrow">
+        <img src="../iconos/flechita.svg" alt="arrow">
         <p class="title">My order</p>
       </div>
   
