--- a/pages/hombres.html
+++ b/pages/hombres.html
@@ -447,10 +447,7 @@
         <div class="box">
           <h2>SOBRE NOSOTROS</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ipsa?
+            Somos una tienda online, que busca incorporarse en el mundo virtual, para brindar un mejor servicio a sus clientes, brindándole el beneficio de adquirir nuestros productos sin salir de sus casas.
           </p>
         </div>
         <div class="box">
