--- a/pages/hombres.html
+++ b/pages/hombres.html
@@ -9,6 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="shortcut icon" href="../iconos/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css" />
@@ -435,38 +436,17 @@
         </div>
       </div>
     </section>
-    <footer class="pie-pagina">
-      <div class="grupo-1">
-        <div class="box">
-          <figure>
-            <a href="#">
-              <img src="../logos/logo_yard_sale.svg" alt="Logo" />
-            </a>
-          </figure>
-        </div>
-        <div class="box">
-          <h2>SOBRE NOSOTROS</h2>
-          <p>
-            Somos una tienda online, que busca incorporarse en el mundo virtual, para brindar un mejor servicio a sus clientes, brindándole el beneficio de adquirir nuestros productos sin salir de sus casas.
-          </p>
-        </div>
-        <div class="box">
-          <h2>SIGUENOS</h2>
-          <div class="red-social">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-youtube"></a>
+    <footer class="footer">
+      <section class="footer__copy container">
+          <div class="footer__social">
+              <a href="#" class="footer__icons"><img src="../iconos/facebook.svg" class="footer__img"></a>
+              <a href="#" class="footer__icons"><img src="../iconos/twitter.svg" class="footer__img"></a>
+              <a href="#" class="footer__icons"><img src="../iconos/youtube.svg" class="footer__img"></a>
           </div>
-        </div>
-      </div>
-      <div class="grupo-2">
-        <small
-          >&copy; 2022 <b>Carlos Cudriz</b> - Todos los Derechos
-          Reservados.</small
-        >
-      </div>
-    </footer>
+
+          <h3 class="footer__copyright">Derechos reservados &copy; Carlos Cudriz</h3>
+      </section>
+  </footer>
     <script src="../main.js"></script>
   </body>
 </html>
