modificando la pagina de inicio

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -111,7 +111,7 @@
     <aside class="product-detail inactive">
       <div class="title-container">
         <img src="../iconos/flechita.svg" alt="arrow">
-        <p class="title">My order</p>
+        <p class="title">Mi pedido</p>
       </div>
   
       <div class="my-order-content">
@@ -150,7 +150,7 @@
         </div>
   
         <button class="primary-button">
-          Checkout
+          verificar
         </button>
       </div>
     </div>
