--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script
       src="https://kit.fontawesome.com/eb496ab1a0.js"
       crossorigin="anonymous"
@@ -12,7 +13,6 @@
     <link rel="shortcut icon" href="./iconos/favicon.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="./css/estilos.css" />
     <title>Yard Sale</title>
   </head>
@@ -156,289 +156,34 @@
       </div>
     </div>
     </aside>
-
-    <section class="main-container">
-      <div class="cards-container">
-        <div class="product-card">
-          <img src="./imagenes/hombres/camisetas/camiseta_negra.jpg" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$28,000</p>
-              <p>Camiseta</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img
-            src="./imagenes/mujeres/camisas/camiseta_blanca_espalda_descubierta.webp"
-            alt=""
-          />
-          <div class="product-info">
-            <div>
-              <p>$55,000</p>
-              <p>Camiseta</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/hombres/camisetas/camiseta_roja.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$28,000</p>
-              <p>Camiseta</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/mujeres/camisas/camiseta_marron.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$63,000</p>
-              <p>Camiseta</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/hombres/joggers/joggers_negro.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$28,000</p>
-              <p>Camiseta</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/mujeres/camisas/camiseta_negra.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$63,000</p>
-              <p>Camiseta</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/hombres/camisetas/camiseta.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$28,000</p>
-              <p>Camiseta</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/mujeres/camisas/camiseta.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$88,000</p>
-              <p>Camiseta</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/hombres/jeans/jeans_negro.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$75,000</p>
-              <p>Jeans</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/hombres/jeans/jeans_gris_diseño.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$80,000</p>
-              <p>Jeans</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/mujeres/jeans/jeans_azul.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$75,000</p>
-              <p>Jeans</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/mujeres/shorts/shorts_beige.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$50.000</p>
-              <p>Shorts</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/hombres/joggers/joggers_beige.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$55,000</p>
-              <p>Joggers</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/mujeres/shorts/shorts_naranja.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$50,000</p>
-              <p>Shorts</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/hombres/camisetas/camiseta_verde.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$170,000</p>
-              <p>Tenis</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/hombres/calzado/tenis_azules.jpeg" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$180,000</p>
-              <p>Tenis</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/mujeres/calzado/tenis_azules.jpeg" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$180,000</p>
-              <p>Tenis</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/hombres/jeans/jeans_azul_diseño.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$160,000</p>
-              <p>Tenis</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-        <div class="product-card">
-          <img src="./imagenes/hombres/calzado/tenis_azules_botas.jpeg" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$180,000</p>
-              <p>Tenis</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/hombres/calzado/tenis_blancos.webp" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$130,000</p>
-              <p>Tenis</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <img src="./imagenes/mujeres/calzado/tenis_morados.jpeg" alt="" />
-          <div class="product-info">
-            <div>
-              <p>$140,000</p>
-              <p>Tenis</p>
-            </div>
-            <figure>
-              <img src="./iconos/bt_add_to_cart.svg" alt="" />
-            </figure>
-          </div>
-        </div>
+<main>
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./imagenes/retrato-guapo-sonriente-elegante-joven-modelo-vestido-ropa-jeans-hombre-moda_158538-5030.jpg" class="d-block w-100" alt="...">
       </div>
-    </section>
-
-    <!--mi orden-->
-
-  
+      <div class="carousel-item">
+        <img src="./imagenes/retrato-bella-modelo-sonriente-vestida-pantalones-cortos-verano-hipster-jeans-ropa_158538-3201.webp" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./imagenes/hermosa-chica-sexy-sonriente-hermosa-sueter-verde-moda-mujer-posando-gafas-sol-redondas-modelo-divirtiendose_158538-5263.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</main>
     <!--Pie de Pagina-->
     <footer class="footer">
       <section class="footer__copy container">
@@ -451,6 +196,9 @@
           <h3 class="footer__copyright">Derechos reservados &copy; Carlos Cudriz</h3>
       </section>
   </footer>
+   <!--scrpts de BTS-->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
      <script src="main.js"></script>
 
   </body>
