--- a/pages/mujeres.html
+++ b/pages/mujeres.html
@@ -109,7 +109,7 @@
     <aside class="product-detail inactive">
       <div class="title-container">
         <img src="../iconos/flechita.svg" alt="arrow">
-        <p class="title">My order</p>
+        <p class="title">Mi pedido</p>
       </div>
   
       <div class="my-order-content">
@@ -148,7 +148,7 @@
         </div>
   
         <button class="primary-button">
-          Checkout
+          verificar
         </button>
       </div>
     </div>
