agregue mas contenido al index

--- a/index.html
+++ b/index.html
@@ -147,44 +147,65 @@
   </aside>
   <!--contenido-->
   <main>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
+    <div class="container-fluid">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="./imagenes/retrato-guapo-sonriente-elegante-joven-modelo-vestido-ropa-jeans-hombre-moda_158538-5030.jpg"
+              class="d-block w-100" alt="retrato-guapo-sonriente-elegante-joven-modelo-vestido-ropa-jeans-hombre-moda">
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./imagenes/retrato-bella-modelo-sonriente-vestida-pantalones-cortos-verano-hipster-jeans-ropa_158538-3201.webp"
+              class="d-block w-100"
+              alt="retrato-bella-modelo-sonriente-vestida-pantalones-cortos-verano-hipster-jeans-ropa">
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./imagenes/hermosa-chica-sexy-sonriente-hermosa-sueter-verde-moda-mujer-posando-gafas-sol-redondas-modelo-divirtiendose_158538-5263.jpg"
+              class="d-block w-100"
+              alt="hermosa-chica-sexy-sonriente-hermosa-sueter-verde-moda-mujer-posando-gafas-sol-redondas-modelo-divirtiendose">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            src="./imagenes/retrato-guapo-sonriente-elegante-joven-modelo-vestido-ropa-jeans-hombre-moda_158538-5030.jpg"
-            class="d-block w-100" alt="retrato-guapo-sonriente-elegante-joven-modelo-vestido-ropa-jeans-hombre-moda">
-        </div>
-        <div class="carousel-item">
-          <img
-            src="./imagenes/retrato-bella-modelo-sonriente-vestida-pantalones-cortos-verano-hipster-jeans-ropa_158538-3201.webp"
-            class="d-block w-100" alt="retrato-bella-modelo-sonriente-vestida-pantalones-cortos-verano-hipster-jeans-ropa">
-        </div>
-        <div class="carousel-item">
-          <img
-            src="./imagenes/hermosa-chica-sexy-sonriente-hermosa-sueter-verde-moda-mujer-posando-gafas-sol-redondas-modelo-divirtiendose_158538-5263.jpg"
-            class="d-block w-100" alt="hermosa-chica-sexy-sonriente-hermosa-sueter-verde-moda-mujer-posando-gafas-sol-redondas-modelo-divirtiendose">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
   </main>
+  <section class="track container">
+    <div class="track__texts">
+      <h2 class="titleind">Yard Sale piensa en ti.</h2>
+      <p class="paragraph">Adquiere nuestras prendas a un precio asequible y deja sorprendidos a todos con tu nuevo
+        look.</p>
+    </div>
+    <figure class="track__picture">
+      <img src="./imagenes/descuentos.jpg" class="track__img">
+    </figure>
+    <article class="track__articles">
+      <div class="track__item">
+        <h3 class="track__offer">¡No lo pienses más!</h3>
+        <p class="track__copy"> Queremos brindarles la mejor atención a nuestros clientes, por eso traemos grandes
+          descuentos cada mes, para que no te quedes sin vestir las mejores prendas del mercado.</p>
+      </div>
+    </article>
+  </section>
   <!--footer-->
   <footer class="footer">
     <section class="footer__copy container">
