corregimos error de ruta

--- a/pages/mujeres.html
+++ b/pages/mujeres.html
@@ -324,7 +324,7 @@
         </div>
       </div>
       <div class="product-card">
-        <img src="../imagenes/mujeres/calzado/tenis_azules.jpeg" alt="tenis />
+        <img src="../imagenes/mujeres/calzado/tenis_azules.jpeg" alt="tenis" />
         <div class="product-info">
           <div>
             <p>$180,000</p>
