agregamos la etiqueta meta description

--- a/pages/hombres.html
+++ b/pages/hombres.html
@@ -7,11 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="shortcut icon" href="../iconos/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../logos/logo_yard_sale.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/estilos.css" />
-  <title>Document</title>
+  <meta name="description" content="calzado y prendas de vestir para caballeros.">
+  <title>Yard Sale - sección hombres</title>
 </head>
 
 <body>
