--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,10 +10,11 @@
   <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="shortcut icon" href="../iconos/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../logos/logo_yard_sale.svg" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/estilos.css" />
-  <title>Document</title>
+  <meta name="description" content="Si tienes alguna duda, no dudes en dejarnos tus datos y nos pondremos en contacto lo más antes posible.">
+  <title>Yard Sale - contacto</title>
 </head>
 
 <body>
