--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,11 +8,12 @@
   <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="shortcut icon" href="../iconos/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../logos/logo_yard_sale.svg" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/estilos.css" />
-  <title>Document</title>
+  <meta name="description" content="Conoce un poco mas sobre nuestra tienda, nuestros medios de pago y despeja las duadas que tengas.">
+  <title>Yard Sale - sobre nosotros</title>
 </head>
 
 <body>
